# indexion

./: .gitignore  .gitmodules  .indexion.toml  .indexionignore  CLAUDE.md  README.mbt.md  RELEASE_NOTES.md  bisect.coverage  doc.json  eslint.config.js  indexion_test.mbt  install.sh  moon.mod.json  moon.pkg  package.json  pkg.generated.mbti  segmentation.mbt
.github/workflows/: ci.yml  pages.yml  release.yml
.indexion/wiki/: index.md  (+40 more)
_build_spec/: packages.json
docs/: api-reference.json  documentation.md  installation.md  intro.md  license.md  summary.md
fixtures/project/cargo/: Cargo.toml
fixtures/project/cargo-workspace/: Cargo.toml
fixtures/project/cargo-workspace/crates/cli/: Cargo.toml
fixtures/project/cargo-workspace/crates/cli/src/: commands.rs  main.rs
fixtures/project/cargo-workspace/crates/core/: Cargo.toml
fixtures/project/cargo-workspace/crates/core/src/: config.rs  error.rs  lib.rs
fixtures/project/cargo-workspace/crates/server/: Cargo.toml
fixtures/project/cargo-workspace/crates/server/src/: handlers.rs  main.rs
fixtures/project/cargo/src/: cli.rs  config.rs  lib.rs  main.rs  runner.rs
fixtures/project/python/: pyproject.toml
fixtures/project/python/src/example_sdk/: __init__.py  client.py  models.py
fixtures/project/python/src/example_sdk/auth/: __init__.py  token.py
kgfs/: b64-jpeg.kgf  b64-png.kgf  base64-utf8.kgf  base64.kgf  c.kgf  chinese.kgf  clojure.kgf  cpp.kgf  csharp.kgf  css.kgf  dart.kgf  elixir.kgf  english.kgf  go.kgf  haskell.kgf  html.kgf  japanese-law-deps.kgf  japanese-law.kgf  japanese.kgf  java.kgf  javascript.kgf  jpeg-b64hex.kgf  jpeg-hex.kgf  julia.kgf  korean.kgf  kotlin.kgf  lua.kgf  markdown.kgf  moonbit-doc.kgf  moonbit.kgf  moonpkg.kgf  npm-package-json.kgf  ocaml.kgf  php.kgf  png-b64hex.kgf  png-hex.kgf  python-doc.kgf  python.kgf  ruby.kgf  rust.kgf  (+8 more)
output/: api-reference.json  api-reference.md  summary.md
schemas/: doc-config.schema.json
scripts/: test-timing.sh
segmentation/: types.mbt
wiki/: API-Client-packages-api-client.md  Analysis-Tools.md  Architecture.md  CLI-Commands.md  CLI-Entry-Point-cmd-indexion.md  Claude-Code-Skills-skills.md  CodeGraph.md  Configuration-src-config.md  Core-Concepts.md  Core-Graph-src-core.md  DeepWiki-Frontend-packages-wiki.md  DeepWiki-Frontend.md  Digest-Pipeline-src-digest.md  Digest-Pipeline.md  Document-Generation-src-docgen.md  Documentation-Templates-docs-templates.md  ESLint-Plugins-eslint-plugins.md  ESLint-Rules-eslint-rules.md  File-Filtering-src-filter.md  Getting-Started.md  Git-Operations-src-vcs.md  Glob-Pattern-Matching-src-glob.md  HTTP-Client-src-http.md  Home.md  Ignorefile-Parser-src-ignorefile.md  KGF-Engine-src-kgf.md  KGF-Specifications-kgfs.md  KGF-System.md  KGF-Tokenizer-cmd-kgf-tokenizer.md  MCP-Server-src-mcp.md  Parallel-Processing-src-parallel.md  Pipeline-src-pipeline.md  Plan-IR--Rendering-src-plan.md  Platform-Abstraction-src-platform.md  Project-Documentation-docs.md  Scope-Analysis-src-scope.md  Self-Update-src-update.md  Semantic-Search-src-search.md  Similarity-Algorithms-src-similarity.md  Skill-Definitions-skills-skills.md  (+5 more)
(+1126 files in other folders)
